re-factoring discovered attack impact rule